2008-12-02 Ian Rutt
 * Bump version to 1.0.15 (new development series)
	
2008-12-02 Ian Rutt
 * configure.in: bump version to 1.0.14
 * NEWS: update
	
2008-12-02 Ian Rutt
 * Corrected index transposition in glide_temp.F90 (calcbpmp). Thanks to
 Jonathan Gregory for finding and fixing this.

2008-11-30 Ian Rutt
 * Changed all <config.inc> to "config.inc", to conform with
   strict requirements of gfortran 4.4.0

2008-11-23 Ian Rutt
 * Bump version to 1.0.13 (new development series)

2008-11-23 Ian Rutt
 * configure.in: bump version to 1.0.12
 * NEWS: update

2008-09-24 Ian Rutt
 * Fixed minor build bug in glide_thck.F90. Thanks to Christian Ferrer for
 identifying this one.

2008-07-23 Ian Rutt
 * Bump version to 1.0.11 (new development series)
	
2008-07-23 Ian Rutt
 * configure.in: bump version to 1.0.10
 * NEWS: update
	
2008-07-23 Ian Rutt
 * Changed basal temperature to be PMP if ice is floating

2008-07-08 Ian Rutt
 * Added option to adjust basal water depth smoothing strength
 * Added option to turn on sliding when T=Tpmp
 * Added option to include basal melt rate in continuity equation
 * Various comments and bits of tidying up

2008-04-03 Ian Rutt
 * Corrected comments in GLINT API - wrong units for water_in and
 water_out. Spotted by Jeremy Fyke.

2008-04-02 Ian Rutt
 * Fixed build issue with INTENT in gfortran. Thanks to Maria Kotjakova
   for pointing this out.

2008-03-14 Ian Rutt
 * Bump version to 1.0.9 (new development series)

2008-03-14 Ian Rutt
 * configure.in: bump version to 1.0.8
 * NEWS: update
	
2008-03-13 Ian Rutt
 * Fixed bug in temperature basal boundary condition. Sliding heat
 generation terms were wrong. EISMINT 2 tests G and H now look better.

2008-03-01 Ian Rutt
 * Fixed precision mismatch build bug in glint_example_clim.F90

2008-02-19 Ian Rutt
 * Bump version to 1.0.7 (new development series)

2008-01-23 Ian Rutt
 * configure.in: bump version to 1.0.6
 * NEWS: update

2008-01-23 Ian Rutt