@@ -1,3 +1,6 @@
+2009-02-25 Ian Rutt
+ * Added additional subroutine for array allocation (3d integer)
+
 2008-12-02 Ian Rutt
  * Bump version to 1.0.15 (new development series)
 	
